# simpleserver

./: .justfile  Cargo.toml  Dockerfile  config.yml
content/: 403.html  404.html  500.html
content/css/: 403.css  404.css  500.css
src/: config.rs  main.rs
src/http/: estatic.rs  mod.rs
