[package]
name = "simpleserver"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
tokio = { version = "1.22", features = ["full", "time"] }
axum = { version = "0.6" , features = ["multipart"] }

# Axum builds on the types in Tower
tower = "0.4"
tower-http = { version = "0.3.5", features = [ "trace", "fs" ] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# Utility
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
